src/styles.css
/* reset */

html {
  font-size: 16px;
}

@media only screen and (max-width: 480px) {
  html {
    font-size: 14px;
  }
}

@media only screen and (min-width: 720px) {
  html {
    font-size: 18px;
  }
}

@media only screen and (min-width: 960px) {
  html {
    font-size: 20px;
  }
}

@media only screen and (min-width: 1240px) {
  html {
    font-size: 24px;
  }
}

fieldset {
  border: 0;
  padding: 0;
  margin: 0;
}

* {
  box-sizing: border-box;
}

label {
  cursor: pointer;
}

/* defaul elements */

.header {
  color: #293264;
  padding: 0;
  font-family: 'Karla', sans-serif;
  font-weight: bold;
}

.score {
  color: #293264;
  text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  font-size: 0.8rem;
  font-weight: 700;
  margin-right: 0.8rem;
}

/* project styles */

body {
  margin: 0;
  width: 100vw;
  height: 100vh;
  background-color: #f5f7fb;
  font-family: 'Inter', sans-serif;
}
.quiz {
  max-width: 2400px;
  width: 100vw;
  min-height: 100vh;
  padding: 2rem;
  background-color: #f5f7fb;
  background-image: url('./images/blue-blob.svg'),
    url('./images/yellow-blob.svg');
  background-repeat: no-repeat;
  background-position: left bottom, right top;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: auto;
}
.quiz.active {
  background-image: url('./images/blue-blob-s.svg'),
    url('./images/yellow-blob-s.svg');
}

.quiz__header {
  font-size: 1rem;
  font-size: 1.953125rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.quiz__description {
  color: #293264;
  font-weight: normal;
  font-size: 1rem;
  margin: 0.5rem 0 30px 0;
}

.quiz__button {
  background-color: #4d5b9e;
  color: #f5f7fb;
  cursor: pointer;
  font-size: 1rem;
  border: none;
  border-radius: 15px;
  padding: 1rem 3.75rem;
}

.quiz__button:hover {
  opacity: 0.9;
}

.quiz__questions {
  width: 100%;
}

.quiz__footer {
  margin: 1rem auto 0;
  text-align: center;
}

.question__group {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  border-bottom: 0.04963rem solid #dbdef0;
  padding-bottom: 0.95rem;
  margin-bottom: 0.95rem;
  column-gap: 1rem;
}

.question__header {
  font-size: 1rem;
  margin-bottom: 0.8rem;
  flex-basis: 100%;
}

.question__label {
  border-radius: 7.942px;
  border: 0.794px solid #4d5b9e;
  padding: 0.25rem 0.5rem;
  font-size: 0.64rem;
}

@media (hover: hover) {
  .question__label:has(.question__input:enabled):not(.question__label--active):hover {
    background-color: #d6dbf5;
    border-color: #d6dbf5;
  }
}

.question__label:has(.question__input:enabled):active,
.question__label:has(.question__input:enabled):focus {
  background-color: #4d5b9e;
  border-color: #4d5b9e;
  color: #ffffff;
}

.question__input {
  width: 0;
  height: 0;
  padding: 0;
  margin: 0;
  border: 0;
}

.question__label.question__label--active {
  background-color: #4d5b9e;
  color: #fff;
}

.question__label.question__label--correct {
  background-color: #94d7a2;
  border-color: #94d7a2;
  color: #293264;
}

.question__label.question__label--incorrect {
  background-color: #f8bcbc;
  border-color: #f8bcbc;
  opacity: 0.5;
  color: #293264;
}

.question__label:not(.question__label--correct):has(.question__input:disabled) {
  opacity: 0.5;
}

.question__label:has(.question__input:disabled) {
  cursor: not-allowed;
}

.loader {
  width: 80px;
  height: 80px;
}

/* media queries for adaptive*/

@media only screen and (min-width: 1240px) {
  .quiz {
    padding: 2rem 6rem;
  }
}

